# AI-395L-Machine-Learning-Template

./: README.md  main.py  pyproject.toml
Homework/00-Homework/: 00-notebook.ipynb
