[project]
name = "ai-395l-machine-learning"
version = "0.1.0"
description = "Jupter notebooks for AI 395L Machine Learning Course"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
]
